# Audion

./: .env.example  .gitignore  .server-locks  AI_DEVELOPMENT_FRAMEWORK.md  AI_DEVELOPMENT_QUALITY_CHECKLIST.md  ANALYSIS_COMPLETE.txt  AUDION_IMPLEMENTATION_MASTER_PLAN.md  AUDION_PROJECT_ROADMAP.md  Audion_Handover_Complete.md  BACKGROUND_PROCESS_ANALYSIS.md  BETA_VERSION_FEATURES.md  BETA_VERSION_FEATURE_REQUIREMENTS.md  BUSINESS_STRATEGY.md  CLAUDE.md  CLAUDE_HANDOVER.md  CODEX_PROJECT_OVERVIEW.md  COMPLETE_PROJECT_STATUS.md  COMPREHENSIVE_FEATURE_ANALYSIS.md  COMPREHENSIVE_NEXT_ACTIONS.md  CONNECTION_ROUTING_GUIDE.md  DEBUG_CHECKLIST.md  DEVELOPER_DEBUG_GUIDE.md  DEVELOPMENT_BEST_PRACTICES.md  DEVELOPMENT_CHECKLIST.md  DEVELOPMENT_PLAN_2025.md  DEVELOPMENT_TODO_LIST.md  EXECUTION_CHECKLIST.md  EXECUTION_STATUS.md  EXPO_DEVELOPMENT_SETUP.md  FREEMIUM_PLAN_VARIABLES.md  HARDCODING_REMEDIATION_COMPLETE.md  HARDCODING_VIOLATIONS_ANALYSIS.md  Home_autopick_test_log.rtf  IMMEDIATE_NEXT_ACTIONS.md  IMPLEMENTATION_PLAN.md  INTEGRATED_ROADMAP.md  LANGUAGE_SETTINGS_TEST_GUIDE.md  LAUNCH_ROADMAP_2025.md  NATIVE_APP_FEATURES_ANALYSIS.md  NATIVE_APP_OPTIMIZATION_PLAN.md  (+60 more)
.serena/: project.yml
archive/: AUTOPICK_V2_IMPLEMENTATION_REPORT.md  EXECUTION_STATUS.md  HARDCODING_ANALYSIS_SUMMARY.txt  HARDCODING_CODE_FIX_EXAMPLES.md  HARDCODING_QUICK_REFERENCE.txt  (+3 more)
audion_new_backend/: .env.sample  .env.test  .pre-commit-config.yaml  Makefile  README.md  audion.db  pyproject.toml  run_seed_rss.py
audion_new_backend/app/: __init__.py  main.py
audion_new_backend/app/api/v1/: api.py
audion_new_backend/app/api/v1/endpoints/: articles.py  audio.py  auth.py  rss_sources.py
audion_new_backend/app/core/: config.py  database.py  security.py
audion_new_backend/app/data/: seed_rss_sources.py
audion_new_backend/app/models/: article.py  audio.py  playlist.py  rss_source.py  source.py  user.py
audion_new_backend/app/services/: __init__.py  audio_service.py  auth_service.py  rss_service.py  rss_source_service.py
audion_new_backend/app/tests/: conftest.py  test_auth.py  test_main.py
(+545 files in other folders)
